--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^5.0.1",
+    "forever": "^0.15.3",
     "slack-node": "^0.1.8",
     "steem": "^0.7.1"
   }
